2006-04-14  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* tests/ns_gifsize.test:
	* tests/ns_jpegsize.test: Fixed to match new error messages

	* nsd/cache.c: Fixed Ns_CacheWaitCreateEntry() NOT to delete
	existing cache entry in case entry is expired.
	This is one possible fix for this call, as it was trashing 
	memory by reusing already deleted (expired) entries before.
	Another possible fix is to delete and re-create expired
	entry, but this costs more time, although it may be a more
	correct thing to do.

2006-04-13  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd/tclcache.c: make sure the value is zero ended

2006-04-13  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* nsd/tclimg.c: Added processing for PNG files. Also added
	commands to compute image type, mimetype and size regardless
	of the image type, by performing internal magic lookup to
	decide which type of image they are handling.

	* nsd/tclcmds.c: Added ns_imgsize, ns_imgtype, ns_imgmime
	commands. These commands operate on any supported image: 
	gif, png and jpeg. The ns_pngsize is added to complete 
	ns_jpegsize and ns_gifsize set, although those are deprecated
	in favour of more simple ns_img[].
	
2006-04-06  Vlad Seryakov  <seryakov@users.sf.net>

	* include/ns.h:
	* nsd/sock.c: Added Ns_SockWait function for compatibility reasons,
	i.e. nsopenssl uses this.

	* nsd/tclcache.c: extar byte allocating is not necessary

2006-04-05  Vlad Seryakov  <seryakov@users.sf.net>

	* tests/http.test: Disable writer test for now to be able to
	run other tests

	* tests/nscache.test: Added test for two new commands
	* nsd/tclcache.c:
	* nsd/tclcmds.c: Added 2 new cache commands ns_cache_get and
	ns_cache_set for easier cache manipulation

2006-03-30  Ibrahim Tannir <itannir@users.sf.net>

	* nsd/adpeval.c:  added translation binary in ParseFile,
	otherwise reading Windows files may break (size != n).

2006-03-28  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>
	